# kbpartpicker-backend

./: .gitignore  Dockerfile  Procfile  README.md  app.py  different_class_names.md  dixie.txt  pyproject.toml  requirements.txt  run.py  scrape.py  setup.py
.circleci/: config.yml
api/: exception_handlers.py  exceptions.py  routes.py
api/handlers/: __init__.py  get.py  get_product.py  search.py
api/routes/: __init__.py  categories.py  products.py
app/: __init__.py
app/mod_auth/: controllers.py  models.py
app/models/: _base.py  country.py  product.py  vendor.py  vendor_product_association.py
config/: database.py  database.sql  driver.py  kbpartpicker.sql
migrations/: postgres_enums.py
migrations/versions/: 07d8ae4cbcdf_.py  15d9a6ebe1f7_initial_migration.py  16754cde33c8_.py  1b0b8f02c0a2_.py  1f412acf7316_.py  25b94d0110aa_.py  38d6a0de219c_.py  3ee175cd092b_.py  5169a4950f2c_.py  56e465a233f1_.py  74f558eed8d8_.py  7a69153ac3eb_.py  903891399954_.py  94522daf9562_.py  9867cfc8fa97_.py  (+11 more)
models/: __init__.py  _base.py  country.py  product.py  vendor.py  vendor_product_association.py
scraper/: main.py
scrapers/: __init__.py  _base.py  _common.py  cannon_keys.py  database_action.py  kbd_fans.py  novel_keys.py
terraform/: .terraform.lock.hcl  addons.tf  apps.tf  configs.tf  pipelines.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  versions.tf
tests/: conftest.py  test_novel_keys.py
utils/: catch_noelem_exception.py  converters.py  list_of.py  regex_dict.py
vendors/: __init__.py  cannon_keys.py  kbd_fans.py  novel_keys.py
(+20 files in other folders)
